<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BitZero</string>
    
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    
    <string name="add_a">Add Address</string>
    <string name="address">Your Bitcoin Address</string>
    <string name="name">Optional: Address\' label</string>
	<string name="add">Add</string>
	<string name="edit">Edit</string>
	<string name="cancel">Cancel</string>
	<string name="close">Close</string>
	
	<string name="btcaddress">BitCoin Address</string>
	<string name="alabel">Address\' Label</string>
	
	<string name="empty">Empty Field</string>
	
	<string name="empty_dialog">Error, there are one or more empty field!</string>
	
	<string name="dialog_title_bitzero">BitZero</string>
	<string name="dialog_msg_bitzero">Remember, BitZero is not a BitCoin Wallet.
	    Add a BitCoin Address to start.</string>
	<string name="dialog_title_uhost">Network Error</string>
	<string name="dialog_msg_uhost">The network isn\'t avviable.</string>
	<string name="dialog_msg_ckconnection">Connection failed. Connect and restart BitZero</string>
	
	<string name="result_failed">No barcode found</string>
	<string name="result_failed_why">"The user gave up and pressed Back"</string>
	<string name="result_succeeded">Found barcode</string>
</resources>
