<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".EditActivity" >

    <TextView
        android:id="@+id/tvIp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alabel"
        android:textSize="15sp" />

    <EditText
        android:inputType=""
        android:id="@+id/etIp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvIp"
        android:layout_below="@+id/tvIp"
        android:layout_marginTop="14dp"
        android:ems="10" />

    <TextView
        android:id="@+id/tvDomain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etIp"
        android:layout_below="@+id/etIp"
        android:layout_marginTop="16dp"
        android:text="@string/btcaddress"
        android:textSize="15sp" />

    <EditText
        android:inputType=""
        android:id="@+id/etDomain"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvDomain"
        android:layout_below="@+id/tvDomain"
        android:layout_marginTop="14dp"
        android:ems="10" />

    <Button
        android:id="@+id/btnOk"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etDomain"
        android:layout_below="@+id/etDomain"
        android:layout_marginTop="16dp"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:text="@string/edit" />

    <Button
        android:id="@+id/btnClose"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnOk"
        android:layout_below="@+id/btnOk"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:text="@string/close" />

</RelativeLayout>